# computer-science-basics

./: .gitignore  CMakeLists.txt  README.md  config.cc  even_fibonacci.py  power_set.cc  pre_order.cc  prime_factors.py  pythagorean_triplet.py  sum_of_primes.py  tree_traversal.cc  two_sum_problem.cc
arrays_strings/: 3sum.cc  image_rotation.cc  kth_element.cc  repeated_string.py  reverse_strings.cc  string_compression.cc  two_chars.cc  word_search.cc
arrays_strings/resources/: heart.txt
classes_objects/: animal.cc  cache.cc  circular_buffer.cc  config.cc  foo.cc  inheritance.cc  pointer.cc  readme.md  shared_ptr.cc
combinatorics/: combinations.py  next_permutation.cc  power_set.cc
dynamic_programming/: change_making.cc  common.h  greedy_text_justification.h  investment.py  longest_common_subsequence.cc  matrix_chain_multiplication.py  maximum_sum_subarray.cc  rod_cutting.py  run_stairs.cc  text_justification.cc
dynamic_programming/tests/: greedy_text_justification_test.cc
geometry/: graham_scan.py  ransac.py  test_geometry.py  test_line.py  test_polygon.py  vertical_symmetry.cc
graphs/: bfs.cc  bfs.h  bfs_test.cc  boost_graphviz.cc  dfs.cc  dfs.h  dot_writer.h  graph_definitions.h  graph_properties.h  linked_list.h  linked_list_test.cc  shortest_path.h  weighted_graph_definitions.h
graphs/planning_map/: a_star.py  bfs.py  definitions.py  new_rrt.py  rrt_star.py
hackerrank/: dynamic-array.cpp  form_magic_square.py  insertion_on_sorted.cc  jumping_on_the_clouds.py  kangaroo.cpp  left_array_rotation.py  letter_combinations_of_phone_number.cc  new_year_chaos.py  print_linked_list.cpp  ransom_note.cc  sum_min_max.cpp  tree_definitions.h
hashing/: linked_list.py  simple_dict.py
heaps/: max_heap.py  min_heap.py
huffman_coding/: coding.cc  priority_queue.cc  readme.md  test.cc
include/: container_extension_functions.h  ostream_overload.h  string_operators.h
lib/: geometry.py  limits.py  line.py  math_utils.py  point.py  polygon.py
multithreading/: condition_variable.cc
numerics/: integer_sqaure_root.cc  kth_root.cc  twos_complement.py
online_challenges/: number_of_islands.cc  peak_element.cc
planning_map/: a_star.py  bfs.py  definitions.py
sorting/: bubble_sort.cc  counting_sort.cc  counting_sort.py  insertion_sort.cc  merge_sort.cc  quick_sort.cc  radix_sort.cc
trees/: avl_tree.h  dot_writer.h  main.cc  test_avl_tree_insert.cc  test_dot_writer.cc  test_tree_definitions.cc  tree_definitions.h
(+18 files in other folders)
